[gd_scene load_steps=54 format=3 uid="uid://dv0nrb6gfu4vi"]

[ext_resource type="Script" uid="uid://dq40owgc6yidc" path="res://trash)))/margin_container.gd" id="1_leih5"]
[ext_resource type="AudioStream" uid="uid://dk03drklcmeqf" path="res://trash)))/click.mp3" id="1_onrnh"]
[ext_resource type="Script" uid="uid://b6d4nul45fj5l" path="res://line/font.gd" id="2_7bseo"]
[ext_resource type="Theme" uid="uid://yldbg0md2xxl" path="res://themes/separators.tres" id="3_c0re1"]
[ext_resource type="Theme" uid="uid://bm2tfjmmgs5fo" path="res://themes/panel_round.tres" id="3_nvks4"]
[ext_resource type="Script" uid="uid://ceei74a8ps5li" path="res://line/keyboard.gd" id="5_3emns"]
[ext_resource type="Script" uid="uid://c5awh0mn7hqyu" path="res://keyboards/key.gd" id="8_a3a06"]
[ext_resource type="Script" uid="uid://860hdl84gpb2" path="res://line/super.gd" id="8_ea2m5"]
[ext_resource type="Theme" uid="uid://cnuiw8kysq02q" path="res://themes/round_key.tres" id="9_52axe"]
[ext_resource type="FontFile" uid="uid://c2bn1uoi0dfs4" path="res://fonts/FOTON_round.ttf" id="11_02dme"]
[ext_resource type="Script" uid="uid://dm1o0h1rvswe8" path="res://keyboards/keyboard_2.gd" id="11_bk3ew"]
[ext_resource type="Script" uid="uid://dnany4e34qdiw" path="res://keyboards/key_2.gd" id="12_6agfp"]
[ext_resource type="Script" uid="uid://c77vlth8u1lbm" path="res://keyboards/keyboard.gd" id="12_6gnuv"]
[ext_resource type="Texture2D" uid="uid://bowe3bx7xnfhp" path="res://icons/logo.png" id="14_2vphu"]
[ext_resource type="Script" uid="uid://bjop8pndyoxe6" path="res://menu/settings.gd" id="14_ak1aj"]
[ext_resource type="Script" uid="uid://7w7nq5aps6v3" path="res://menu/link.gd" id="14_h7wxx"]
[ext_resource type="Texture2D" uid="uid://flmxkgdsya7a" path="res://icons/telegram.svg" id="15_kddg5"]
[ext_resource type="Texture2D" uid="uid://8dvvhdxmff0a" path="res://icons/itchio.svg" id="16_2ugk1"]
[ext_resource type="Texture2D" uid="uid://drw54oep2mflm" path="res://icons/youtube.svg" id="17_sr4hs"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sbiel"]
load_path = "res://.godot/imported/super.svg-4387c37013806750ef773f2ebceef6de.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gb6yq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvn61"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7663"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypy7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1c17q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_neo7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ojgdf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hkh17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ser1o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yj5c0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ljxf2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1pf2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upufs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_473lx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m8rro"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ikwlh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m6py1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l7ie1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ijsgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbf8n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3hmk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqhdm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ymcnc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ly57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e18ty"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmsqy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xf8t3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fyfw6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hrk7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xumu5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ulfqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ec63s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6imtj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leih5")

[node name="Audio_click" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("1_onrnh")
max_polyphony = 5

[node name="main_tabs" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("3_nvks4")
tab_alignment = 1
current_tab = 0

[node name="&TEXTEDIT" type="TabBar" parent="MarginContainer/main_tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/main_tabs/&TEXTEDIT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="TextEdit" type="TextEdit" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("9_52axe")
editable = false
virtual_keyboard_enabled = false
wrap_mode = 1
scroll_smooth = true
scroll_past_end_of_file = true
caret_blink = true
caret_blink_interval = 0.25
caret_draw_when_editable_disabled = true
text_direction = 1

[node name="line" type="HBoxContainer" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="font" type="Button" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("9_52axe")
theme_override_font_sizes/font_size = 50
button_mask = 3
text = "@"
script = ExtResource("2_7bseo")

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="super" type="Button" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_52axe")
icon = SubResource("CompressedTexture2D_sbiel")
script = ExtResource("8_ea2m5")

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="keyboard" type="Button" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("9_52axe")
theme_override_font_sizes/font_size = 50
button_mask = 3
text = "#"
script = ExtResource("5_3emns")

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="keyboard" type="GridContainer" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 6
script = ExtResource("12_6gnuv")

[node name="key" type="Button" parent="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_52axe")
icon_alignment = 1
expand_icon = true
script = ExtResource("8_a3a06")

[node name="&TEXTCHIPHER" type="TabBar" parent="MarginContainer/main_tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/main_tabs/&TEXTCHIPHER"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextEdit" type="TextEdit" parent="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("9_52axe")

[node name="Label" type="Label" parent="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer"]
layout_mode = 2
text = "afasf"

[node name="keyboard" type="GridContainer" parent="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 6
script = ExtResource("11_bk3ew")

[node name="key" type="Button" parent="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("9_52axe")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_6agfp")

[node name="menu" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_52axe")
tab_alignment = 1
current_tab = 0
all_tabs_in_front = true

[node name="&SETTINGS" type="TabBar" parent="MarginContainer/menu/TabContainer"]
layout_mode = 2
tab_alignment = 1
script = ExtResource("14_ak1aj")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/menu/TabContainer/&SETTINGS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="test_text" type="Label" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_02dme")
text = "foton"
horizontal_alignment = 1

[node name="font_size" type="HSlider" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
layout_mode = 2
min_value = 5.0
max_value = 97.0
step = 5.0
value = 50.0
rounded = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="language" type="Button" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ENG"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="close" type="Button" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "&CLOSE"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="&LINKS" type="TabBar" parent="MarginContainer/menu/TabContainer"]
visible = false
layout_mode = 2
tab_alignment = 1
script = ExtResource("14_h7wxx")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/menu/TabContainer/&LINKS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("14_2vphu")
expand_mode = 4

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="telegram" type="Button" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_gb6yq")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lvn61")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d7663")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ypy7a")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1c17q")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_neo7s")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ojgdf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_hkh17")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ser1o")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_yj5c0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ljxf2")
icon = ExtResource("15_kddg5")
flat = true

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="itchio" type="Button" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_f1pf2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_upufs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_473lx")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_m8rro")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ikwlh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_m6py1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_l7ie1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ijsgy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gbf8n")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_d3hmk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yqhdm")
icon = ExtResource("16_2ugk1")
flat = true

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="youtube" type="Button" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ymcnc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6ly57")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e18ty")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vmsqy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xf8t3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fyfw6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8hrk7")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_xumu5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ulfqi")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ec63s")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6imtj")
icon = ExtResource("17_sr4hs")
flat = true

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_c0re1")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_c0re1")

[node name="&ABOUT" type="TabBar" parent="MarginContainer/menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/menu/TabContainer/&ABOUT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/menu/TabContainer/&ABOUT/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/menu/TabContainer/&ABOUT/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "&ABOUT_TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/font" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/font" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/font" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/font" method="_on_button_up"]
[connection signal="pressed" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/font" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/font" method="_on_pressed"]
[connection signal="button_down" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" method="_on_button_up"]
[connection signal="pressed" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" method="_on_pressed"]
[connection signal="button_down" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/keyboard" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/keyboard" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/keyboard" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/keyboard" method="_on_button_up"]
[connection signal="pressed" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/keyboard" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/keyboard" method="_on_pressed"]
[connection signal="button_down" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard/key" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard/key" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard/key" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard/key" method="_on_button_up"]
[connection signal="pressed" from="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard/key" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/keyboard/key" method="_on_pressed"]
[connection signal="button_down" from="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard/key" to="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard/key" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard/key" to="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard/key" method="_on_button_up"]
[connection signal="pressed" from="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard/key" to="MarginContainer/main_tabs/&TEXTCHIPHER/VBoxContainer/keyboard/key" method="_on_pressed"]
[connection signal="value_changed" from="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer/font_size" to="MarginContainer/menu/TabContainer/&SETTINGS" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer/language" to="MarginContainer/menu/TabContainer/&SETTINGS" method="_on_language_pressed"]
[connection signal="pressed" from="MarginContainer/menu/TabContainer/&SETTINGS/VBoxContainer/close" to="MarginContainer/main_tabs/&TEXTEDIT/VBoxContainer/line/super" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer/telegram" to="MarginContainer/menu/TabContainer/&LINKS" method="_on_telegram_pressed"]
[connection signal="pressed" from="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer/itchio" to="MarginContainer/menu/TabContainer/&LINKS" method="_on_itchio_pressed"]
[connection signal="pressed" from="MarginContainer/menu/TabContainer/&LINKS/VBoxContainer/HBoxContainer/youtube" to="MarginContainer/menu/TabContainer/&LINKS" method="_on_youtube_pressed"]
